--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
     <br><br>
     <div class="button-container">
-    <button class="red-button" onclick="redirectTo('https://oldmikers.github.io/')">Home</button>
+    <button class="red-button" onclick="redirectTo('https://oldmikers.github.io/darkmode/')">Home</button>
     <button class="red-button" onclick="redirectTo('https://www.chess.com/')">Chess</button>
     <button class="red-button" onclick="redirectTo('https://sites.google.com/view/uthmans-special/ball-surfer-3d')">Uthmans Special</button>
     <button class="red-button" onclick="redirectTo('https://sites.google.com/view/abcmath-u-46/home')">oldmikers site</button>
