--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
     <button class="red-button" onclick="redirectTo('https://sites.google.com/site/classroom6x/unblockedgames')">classroom 6x</button>
     </div>
 
-    <button class="settings-button" onclick="redirectTo('https://oldmikers.github.io/setting/')">
+    <button class="settings-button" onclick="redirectTo('https://oldmikers.github.io/darkmodesettings/')">
         <img src="settings-icon.png" alt="Settings Icon">
     </button>
 </body>
