--- a/index.html
+++ b/index.html
@@ -64,6 +64,15 @@
             overflow-x: auto;
         }
 
+        /* New styles for acknowledgment */
+        .acknowledgment {
+            position: fixed;
+            bottom: 10px;
+            left: 10px;
+            color: #ffffff;
+            font-size: 12px;
+        }
+
         @media (max-width: 768px) {
             .red-button {
                 padding: 3px 6px;
@@ -114,21 +123,24 @@
 
     <br><br>
     <div class="button-container">
-    <button class="red-button" onclick="redirectTo('https://oldmikers.github.io/darkmode/')">Home</button>
-    <button class="red-button" onclick="redirectTo('https://www.chess.com/')">Chess</button>
-    <button class="red-button" onclick="redirectTo('https://sites.google.com/view/uthmans-special/ball-surfer-3d')">Uthmans Special</button>
-    <button class="red-button" onclick="redirectTo('https://sites.google.com/view/abcmath-u-46/home')">oldmikers site</button>
-    <button class="red-button" onclick="redirectTo('https://sites.google.com/view/evms-helpline/games')">evms helpline</button>
-    <button class="red-button" onclick="redirectTo('https://sites.google.com/view/u-46-links-org/gamez')">u46 links</button>
-    <button class="red-button" onclick="redirectTo('https://sites.google.com/view/east-view-middle-school-home/games')">evms homepage</button>
-    <button class="red-button" onclick="redirectTo('https://flowos.shieldbotlist.xyz/events')">interstellar</button>
-    <button class="red-button" onclick="redirectTo('https://walkin.glitch.me/')">walkin.glitch.me</button>
-    <button class="red-button" onclick="redirectTo('https://sites.google.com/site/classroom6x/unblockedgames')">classroom 6x</button>
+        <button class="red-button" onclick="redirectTo('https://oldmikers.github.io/darkmode/')">Home</button>
+        <button class="red-button" onclick="redirectTo('https://www.chess.com/')">Chess</button>
+        <button class="red-button" onclick="redirectTo('https://sites.google.com/view/uthmans-special/ball-surfer-3d')">Uthmans Special</button>
+        <button class="red-button" onclick="redirectTo('https://sites.google.com/view/abcmath-u-46/home')">oldmikers site</button>
+        <button class="red-button" onclick="redirectTo('https://sites.google.com/view/evms-helpline/games')">evms helpline</button>
+        <button class="red-button" onclick="redirectTo('https://sites.google.com/view/u-46-links-org/gamez')">u46 links</button>
+        <button class="red-button" onclick="redirectTo('https://sites.google.com/view/east-view-middle-school-home/games')">evms homepage</button>
+        <button class="red-button" onclick="redirectTo('https://flowos.shieldbotlist.xyz/events')">interstellar</button>
+        <button class="red-button" onclick="redirectTo('https://walkin.glitch.me/')">walkin.glitch.me</button>
+        <button class="red-button" onclick="redirectTo('https://sites.google.com/site/classroom6x/unblockedgames')">classroom 6x</button>
     </div>
 
     <button class="settings-button" onclick="redirectTo('https://oldmikers.github.io/darkmodesettings/')">
         <img src="settings-icon.png" alt="Settings">
     </button>
+
+    <!-- Acknowledgment -->
+    <div class="acknowledgment">Blocked? Don't worry. Make sure to check out settings for more: Features, Themes, and Proxies.</div>
 </body>
 
 </html>
